Update app title

--- a/azure-static-web-app/client/index.html
+++ b/azure-static-web-app/client/index.html
@@ -5,7 +5,7 @@
 -->
 
 <head>
-    <title>Catch The Bus - Azure SQL Sample</title>
+    <title>Catch The Bus - Azure SQL Sample - UPDATED</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="IE=Edge" />
